# hubspot_connector

./: .gitignore  README.md  pyproject.toml  setup.py
hubspot_connector/: __init__.py  hubspot_connector.py  hubspotconnector.py
hubspot_connector/api/: __init__.py  companies.py  contacts.py  deals.py  files.py  line_items.py  notes.py  owners.py  products.py  properties.py
hubspot_connector/tests/: test_hubspot_connector.py
